--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mastashake08/web-iot": "^1.4.1",
+    "@micropython/micropython-webassembly-pyscript": "^1.24.0",
     "micropython": "^1.1.8",
     "monaco-editor": "^0.52.0",
     "nuxt": "^3.14.1592"
