--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@nuxtjs/google-adsense": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@vite-pwa/nuxt": "^0.10.6"
+    "@vite-pwa/nuxt": "^0.10.6",
+    "nuxt-schema-org": "^4.0.0"
   }
 }
